--- a/vercel.json
+++ b/vercel.json
@@ -3,5 +3,8 @@
       "env": {
         "GO_BUILD_FLAGS": "-ldflags '-s -w'"
       }
-    }
+    },
+    "routes": [
+        {"src":"/(.*)","dest":"/api"}
+    ]
   }
