--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,16 @@
 {
-    "build": {
-      "env": {
-        "GO_BUILD_FLAGS": "-ldflags '-s -w'"
+    "version": 2,
+    "builds": [
+      {
+        "src": "main.go",
+        "use": "@vercel/go"
       }
-    },
+    ],
     "routes": [
-        {"src":"/(.*)","dest":"/api"}
+      {
+        "src": "/.*",
+        "dest": "/main.go"
+      }
     ]
   }
+  
