--- a/vercel.json
+++ b/vercel.json
@@ -2,14 +2,14 @@
     "version": 2,
     "builds": [
       {
-        "src": "main.go",
+        "src": "index.go",
         "use": "@vercel/go"
       }
     ],
     "routes": [
       {
         "src": "/.*",
-        "dest": "/main.go"
+        "dest": "/api/index.go"
       }
     ]
   }
